log
Sun 16 Oct 2022 03:17:50 PM UTC: 
 tests:  0|4
total_score: 0/70
33865ba
Sun 16 Oct 2022 03:48:58 PM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:21: error: ‘heap’ undeclared (first use in this function); did you mean ‘Heap’?
   36 |   Heap * newHeap = (heap *)malloc(sizeof(Heap));
      |                     ^~~~
      |                     Heap
heap.c:36:21: note: each undeclared identifier is reported only once for each function it appears in
heap.c:36:27: error: expected expression before ‘)’ token
   36 |   Heap * newHeap = (heap *)malloc(sizeof(Heap));
      |                           ^
Compilation failed
4e44b0a
Sun 16 Oct 2022 03:49:05 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
7b86fed
Sun 16 Oct 2022 03:53:12 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:24:26: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   24 |   return(pq->heapArray[0]->data);
      |                          ^~
heap.c:25:1: error: control reaches end of non-void function [-Werror=return-type]
   25 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8425dc1
Sun 16 Oct 2022 03:53:30 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
7d9c623
Sun 16 Oct 2022 04:08:32 PM UTC: 
 heap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:33:49: error: passing argument 1 of ‘realloc’ makes pointer from integer without a cast [-Werror=int-conversion]
   33 |     pq->heapArray= (heapElem *)realloc(pq->capac*sizeof(heapElem));
      |                                        ~~~~~~~~~^~~~~~~~~~~~~~~~~
      |                                                 |
      |                                                 long unsigned int
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:550:29: note: expected ‘void *’ but argument is of type ‘long unsigned int’
  550 | extern void *realloc (void *__ptr, size_t __size)
      |                       ~~~~~~^~~~~
In file included from test.c:4:
heap.c:33:32: error: too few arguments to function ‘realloc’
   33 |     pq->heapArray= (heapElem *)realloc(pq->capac*sizeof(heapElem));
      |                                ^~~~~~~
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:550:14: note: declared here
  550 | extern void *realloc (void *__ptr, size_t __size)
      |              ^~~~~~~
In file included from test.c:4:
heap.c:43:3: error: ‘size’ undeclared (first use in this function)
   43 |   size++;
      |   ^~~~
heap.c:43:3: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
3ab8725
